scrollbars styling, fix 'read more' on void elements

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,40 @@
     @apply text-xl font-bold;
   }
 }
+
+.scroller {
+  --scrollbar-color-thumb: #9ca3af;
+  /* #221d1c; */
+  --scrollbar-color-track: #0d0b0b;
+  --scrollbar-width: thin;
+  --scrollbar-width-legacy: 10px;
+}
+
+html * {
+  scrollbar-width: thin;
+  scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
+}
+
+/* Modern browsers with `scrollbar-*` support */
+@supports (scrollbar-width: auto) {
+  .scroller {
+    scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
+    scrollbar-width: var(--scrollbar-width);
+  }
+}
+
+/* Legacy browsers with `::-webkit-scrollbar-*` support */
+@supports selector(::-webkit-scrollbar) {
+  .scroller::-webkit-scrollbar-thumb {
+    background: var(--scrollbar-color-thumb);
+  }
+
+  .scroller::-webkit-scrollbar-track {
+    background: var(--scrollbar-color-track);
+  }
+
+  .scroller::-webkit-scrollbar {
+    max-width: var(--scrollbar-width-legacy);
+    max-height: var(--scrollbar-width-legacy);
+  }
+}
